<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_car</name>
  <version>0.0.0</version>
  <description>Autonomous car robot for my Hiwi job :)</description>
  <maintainer email="jakub.stanczyk2013@gmail.com">jakub</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend> <!-- Required for Python scripts -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>   
    <build_type>ament_cmake</build_type>
  </export>
</package>
